Fix sidebar overflow

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -123,8 +123,8 @@ p {
   box-sizing: border-box;
   flex: 0 0 0;
   height: 100%;
-  transition: all 200ms ease-in-out;
-  width: 0;
+  transition: all 300ms ease-in-out;
+  overflow: hidden;
   a {
     color: rgba($light-gray, 0.8);
     text-decoration-color: rgba($light-gray, 0.3);
@@ -135,14 +135,14 @@ p {
   }
   div {
     opacity: 0;
-    display: none;
-    transition: opacity 300ms ease-out;
+    transition: opacity 400ms ease-out;
   }
 }
 .sidebar-show{
   flex-basis: 18em;
   div {
     opacity: 1;
+    transition: opacity 150ms ease-out 130ms;
   }
 }
 .sidebar-item {
